# Botfather_Repo

./: Justfile  README.md  pyproject.toml  setup.cfg
.github/workflows/: lint.yml
archivebot/: archivebot.db  bot.session  bot_main.py  db.py  main.py  test_import.py  user_session.session
archivebot/models/: __init__.py  file.py  subscriber.py
archivebot/tests/: test_archivebot.py  test_db.py
