
[tool.poetry]
name = "archivebot"
version = "0.1.0"
description = "A telegram bot for backing up and collecting all kinds of media."
authors = ["Arne Beer <contact@arne.beer>"]
license = "MIT"
repository = "https://github.com/nukesor/archivebot"

[tool.poetry.dependencies]
python = "^3.10"
cryptg = "^0.2"
telethon = "^1.25.0"
SQLAlchemy = "^1.4"
sqlalchemy-utils = "^0.37"
raven = "^6.10"
toml = "^0.10"
typer = "^0.6.1"

[tool.poetry.group.dev.dependencies]
autoflake = "^1.7.7"
black = "^22.10.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
types-toml = "^0.10.8"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pytest-mock = "^3.6.1"
bandit = "^1.7.0"
safety = "^1.10.3"
pylint = "^2.12.2"
mypy = "^0.910"
sphinx = "^4.3.0"
sphinx_rtd_theme = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
line_length = 88
profile = "black"

[tool.mypy]
files = "archivebot"
ignore_missing_imports = true
